# lab-Arkanoid

./: .gitignore  CMakeLists.txt  README.md
include/: Ball.h  Block.h  Bonus.h  Constants.h  Game.h  GameState.h  Paddle.h  Vec2.h
src/: Ball.cpp  Block.cpp  Bonus.cpp  Game.cpp  Paddle.cpp
